Fix icon alignment on subsite trigger.

--- a/resources/assets/styles/components/_header-subsite-menu.scss
+++ b/resources/assets/styles/components/_header-subsite-menu.scss
@@ -8,7 +8,6 @@
   a.menu-subsite-trigger:focus {
     position: relative;
     color: $white;
-    display: block;
     font-size: 24px;
     font-weight: 700;
     text-transform: uppercase;
@@ -19,6 +18,9 @@
     text-align: center;
     cursor: pointer;
     margin-right: $golden-ratio-2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @include respond(xs, sm) {
       display: none;
